--- a/index.html
+++ b/index.html
@@ -97,9 +97,218 @@
             </p>
             <button>Подробнее</button>
             <button>Забронировать</button>
+            <img src="/images/car 1.svg" alt="" width="330" height="220">
+            <img src="/images/car3.svg" alt="" width="486" height="324">
+            <button>
+                Слайд 1
+            </button>
+            <button>
+                Слайд 2
+            </button>
+            <button>
+                Слайд 3
+            </button>
+        </section>
+        <section>
+            <p>
+                РАСШИРЕННЫЙ от 16000 <img src="/images/ruble.svg" alt="Рубль" width="10" height="14">
+            </p>
+            <p>
+                <ul>
+                    <li><img src="/images/clock.svg" alt="" width="13" height="13"> Время в пути: 6 - 8 часа</li>
+                    <li><img src="/images/map.svg" alt="" width="17" height="17"> Расстояние: 60 - 70 км</li>
+                    <li><img src="/images/star.svg" alt="" width="17" height="17"> Сложность: 5***</li>
+                </ul>
+            </p>
+            <h2>
+                Маршрут <img src="/images/icon.svg" alt="" width="22" height="22">
+            </h2>
+            <p>
+                Смотровая - Родник - Камень Джигита - Адербиевка - Гора Нексис --Грозовые Ворота - Шашлыки - Цыгельский водопад (чаша любви) - Форсаж
+            </p>
+            <button>Подробнее</button>
+            <button>Забронировать</button>
+            <img src="/images/car second.svg" alt="" width="330" height="220">
+            <img src="/images/car first.svg" alt="" width="486" height="324">
+            <button>
+                Слайд 1
+            </button>
+            <button>
+                Слайд 2
+            </button>
+            <button>
+                Слайд 3
+            </button>
+        </section>
+        <section>
+            <p>
+                EXPERIENCE от 7000 <img src="/images/ruble.svg" alt="Рубль" width="10" height="14">
+            </p>
+            <p>
+                <ul>
+                    <li><img src="/images/clock.svg" alt="" width="13" height="13"> Время в пути: 4 часа</li>
+                    <li><img src="/images/map.svg" alt="" width="17" height="17"> Расстояние: 40 - 50 км</li>
+                    <li><img src="/images/star.svg" alt="" width="17" height="17"> Сложность: 5***</li>
+                </ul>
+            </p>
+            <h2>
+                Маршрут <img src="/images/icon.svg" alt="" width="22" height="22">
+            </h2>
+            <p>
+                Форсаж - Голубая бухта – Заброшенная Тур База – Сухогруз Рио –Форсаж
+            </p>
+            <button>Подробнее</button>
+            <button>Забронировать</button>
             <img src="/images/car.svg" alt="" width="330" height="220">
             <img src="/images/car2.svg" alt="" width="486" height="324">
+            <button>
+                Слайд 1
+            </button>
+            <button>
+                Слайд 2
+            </button>
+            <button>
+                Слайд 3
+            </button>
         </section>
+        <section>
+            <h1>
+                Затрудняетесь выбрать маршрут?
+            </h1>
+            <p>
+                Пройдите тест и мы поможем вам подобрать оптимальную 
+под вас экскурсию
+            </p>
+            <button>
+                Начать тест
+            </button>
+        </section>
+        <section>
+            <h1>
+                Наша команда
+            </h1>
+            <img src="/images/Woman.svg" alt="">
+            <p>
+                Юлиана руководитель
+            </p>
+            <img src="/images/man.svg" alt="">
+            <p>
+                Максим старший инструктор
+            </p>
+            <img src="/images/Woman1.svg" alt="">
+            <p>
+                Кристина администратор
+            </p>
+            <img src="/images/man1.svg" alt="">
+            <p>
+                Юрий старший механик
+            </p>
+        </section>
+        <section>
+            <h1>
+                Условия предоставления услуг
+            </h1>
+            <ul>
+                <li>При прокате или аренде строго соблюдать правила техники безопасности и все требования инструктора!</li>
+                <li>К управлению НЕ ДОПУСКАЮТСЯ лица младше 16 лет и лица в алкогольном опьянении!</li>
+                <li>Распивать спиртные напитки во время проката, аренды ЗАПРЕЩЕНО! (После? На ваше усмотрение)</li>
+                <li>Управление осуществляйте в меру своих сил и возможностей. Не переоценивайте себя! Это опасно!!!</li>
+                <li>Перед каждым катанием опытный инструктор научит Вас основам управления и будет сопровождать на протяжении всего маршрута.</li>
+                <li>При прокате или аренде строго соблюдать правила техники безопасности и все требования инструктора!</li>
+            </ul>
+        </section>
+        <section>
+            <h1>
+                Спецпредложения
+            </h1>
+            <img src="/images/shelk.svg" alt="">
+            <h2>
+                Скидка 10% на День Рождение
+            </h2>
+            <p>
+                в честь Дня Рождения - дарим имениннику скидку 10%
+            </p>
+            <img src="/images/house.svg" alt="">
+            <h2>
+                Скидка 10%
+            </h2>
+            <p>
+                клиентам Ex-Kuban на услуги Загородного клуба Ягода Малина
+            </p>
+            <button>Подробнее</button>
+        </section>
+        <section>
+            <h1>
+                Подарочный сертификат
+            </h1>
+            <p>
+                Хотите сделать оригинальный подарок? Подарите незабываемые эмоции - лучший подарок!
+            </p>
+            <div>
+
+            </div>
+            <p>
+                Хотите удивить своих близких оригинальным подарком? Подарочный сертификат на экскурсию на квадроциклах станет не просто интересным подарком, но и реальной возможностью приблизить Ваших друзей и близких к новому увлечению.
+            </p>
+            <button>Подберем сертификат для вас</button>
+        </section>
+        <section>
+            <h1>
+                Вопросы-ответы
+            </h1>
+            <h2>
+                Актуальный вопрос?
+            </h2>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </p>
+            <h2>
+                Актуальный вопрос?
+            </h2>
+            <h2>
+                Актуальный вопрос?
+            </h2>
+            <h2>
+                Актуальный вопрос?
+            </h2>
+            <img src="/images/gridicons_chat.svg" alt="">
+            <h2>
+                Есть вопросы?
+            </h2>
+            <p>
+                Не стесняйтесь обращаться к нам, если у вас есть какие-либо вопросы, предложения или идеи для сотрудничества
+            </p>
+            <button>
+                Задать вопрос
+            </button>
+        </section>
+        <footer>
+            <h1>
+                Контакты
+            </h1>
+            <img src="/images/Rectangle 131.svg" alt="" width="360" height="215">
+            <ul>
+                <li>Город Геленджик</li>
+                <li>experience@groupgrand.ru</li>
+                <li>+7 928 428-00-62</li>
+                <li>Пн - Пт: 9:00 - 18:00 Сб: 9:00 - 17:00 Вс - выходной</li>
+            </ul>
+            <h2>
+                Написать нам:
+            </h2>
+            <img src="/images/ant-design_whats-app-outlined.svg" alt="">
+            <img src="/images/instagram.svg" alt="">
+            <ul>
+                <li>МАРШРУТЫ</li>
+                <li>ГАЛЕРЕЯ</li>
+                <li>ВОПРОС-ОТВЕТ</li>
+                <li>КОНТАКТЫ</li>
+                <li>УСЛОВИЯ</li>
+                <li>СПЕЦПРЕДЛОЖЕНИЯ</li>
+            </ul>
+            <img src="/images/logo.svg" alt="" width="54" height="69">
+            <p>© CFMOTO Experience Kuban. Внедорожный полигон CFMOTO и прокат квадроциклов в Геленджике</p>
+        </footer>
     </main>
 </body>
 </html>
