--- a/index.html
+++ b/index.html
@@ -44,38 +44,38 @@
         </section>
         <section>
             <div class="container">
-                <h1>
+                <h2>
                     Преимущества
-                </h1>
+                </h2>
                 <ul>
                     <li>
-                        <h2>
+                        <p>
                             Увлекательные экскурсии
-                        </h2>
+                        </p>
                         <p>
                             Маршруты от лесных дорожек до полного бездорожья!
                         </p>
                     </li>
                     <li>
-                        <h2>
+                        <p>
                             Экипировка бесплатно
-                        </h2>
+                        </p>
                         <p>
                             Необходимая экипировка выдается бесплатно
                         </p>
                     </li>
                     <li>
-                        <h2>
+                        <p>
                             Надежная техника
-                        </h2>
+                        </p>
                         <p>
                             18 квадрациклов всех японских брендов
                         </p>
                     </li>
                     <li>
-                        <h2>
+                        <p>
                             Опытные инструктора
-                        </h2>
+                        </p>
                         <p>
                             Обеспечат полную безопасность вашего отдыха
                         </p>
@@ -85,18 +85,18 @@
         </section>
         <section>
             <div class="container">
-                <h1>
+                <h2>
                     Наши маршруты
-                </h1>
+                </h2>
                 <ul>
                     <li>
-                        <h2>БАЗОВЫЙ от 4000 <img src="/images/ruble.svg" alt="Рубль" width="10" height="14"></h2>
+                        <h3>БАЗОВЫЙ от 4000 <img src="/images/ruble.svg" alt="Рубль" width="10" height="14"></h3>
                     </li>
                     <img src="/images/clock.svg" alt="" width="13" height="13"> Время в пути: 1,5 - 2 часа
                     <img src="/images/map.svg" alt="" width="17" height="17"> Расстояние: 20 - 25 км
                     <img src="/images/star.svg" alt="" width="17" height="17"> Сложность: 5***
                     <li>
-                        <h3>Маршрут <img src="/images/icon.svg" alt="" width="22" height="22"></h3>
+                        <p>Маршрут <img src="/images/icon.svg" alt="" width="22" height="22"></p>
                     </li>
                     <li>
                         <ul>
@@ -126,17 +126,17 @@
                         Слайд 3
                     </button>
                     <li>
-                        <h2>
+                        <h3>
                             РАСШИРЕННЫЙ от 16000 <img src="/images/ruble.svg" alt="Рубль" width="10" height="14">
-                        </h2>
+                        </h3>
                     </li>
                     <img src="/images/clock.svg" alt="" width="13" height="13"> Время в пути: 6 - 8 часа
                     <img src="/images/map.svg" alt="" width="17" height="17"> Расстояние: 60 - 70 км
                     <img src="/images/star.svg" alt="" width="17" height="17"> Сложность: 5***
                     <li>
-                        <h3>
+                        <p>
                             Маршрут <img src="/images/icon.svg" alt="" width="22" height="22">
-                        </h3>
+                        </p>
                     </li>
                     <li>
                         <ul>
@@ -172,9 +172,9 @@
                     <img src="/images/clock.svg" alt="" width="13" height="13"> Время в пути: 4 часа
                     <img src="/images/map.svg" alt="" width="17" height="17"> Расстояние: 40 - 50 км
                     <img src="/images/star.svg" alt="" width="17" height="17"> Сложность: 5***
-                    <h3>
+                    <p>
                         Маршрут <img src="/images/icon.svg" alt="" width="22" height="22">
-                    </h3>
+                    </p>
                     <li>
                         <ul>
                             <li>Форсаж</li>
@@ -205,7 +205,6 @@
     под вас экскурсию
                     </p>
                     <a href="">Начать тест</a>
-                </ul>
             </div>
         </section>
         <section>
@@ -243,9 +242,9 @@
         </section>
         <section>
             <div class="container">
-                <h1>
+                <h2>
                     Условия предоставления услуг
-                </h1>
+                </h2>
                 <ul>
                     <li>При прокате или аренде строго соблюдать правила техники безопасности и все требования инструктора!</li>
                     <li>К управлению НЕ ДОПУСКАЮТСЯ лица младше 16 лет и лица в алкогольном опьянении!</li>
@@ -264,18 +263,18 @@
                 <ul>
                     <li>
                         <img src="/images/shelk.svg" alt="">
-                        <h2>
+                        <h3>
                             Скидка 10% на День Рождение
-                        </h2>
+                        </h3>
                         <p>
                             в честь Дня Рождения - дарим имениннику скидку 10%
                         </p>
                     </li>
                     <li>
                         <img src="/images/house.svg" alt="">
-                        <h2>
+                        <h3>
                             Скидка 10%
-                        </h2>
+                        </h3>
                         <p>
                             клиентам Ex-Kuban на услуги Загородного клуба Ягода Малина
                         </p>
@@ -303,32 +302,32 @@
         </section>
         <section>
             <div class="container">
-                <h1>
+                <h2>
                     Вопросы-ответы
-                </h1>
+                </h2>
                 <ul>
                     <li>
-                        <h2>
+                        <p>
                             Актуальный вопрос?
-                        </h2>
+                        </з>
                         <p>
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                         </p>
                     </li>
                     <li>
-                        <h2>
+                        <p>
                             Актуальный вопрос?
-                        </h2>
+                        </p>
                     </li>
                     <li>
-                        <h2>
+                        <p>
                             Актуальный вопрос?
-                        </h2>
+                        </p>
                     </li>
                     <li>
-                        <h2>
+                        <p>
                             Актуальный вопрос?
-                        </h2>
+                        </p>
                     </li>
                 </ul>
                 <img src="/images/gridicons_chat.svg" alt="">
