--- a/index.html
+++ b/index.html
@@ -5,43 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     <title>CF Moto</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="container">
             <a href="">
                 <img src="/images/logo.png" alt="" width="50" height="64">
             </a>
-            <button>
-                <img src="" alt="">
+            <button class="burger_menu">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                    <path d="M19.2188 9.21875H0.78125C0.349766 9.21875 0 9.56852 0 10C0 10.4315 0.349766 10.7812 0.78125 10.7812H19.2188C19.6502 10.7812 20 10.4315 20 10C20 9.56852 19.6502 9.21875 19.2188 9.21875Z" fill="white"/>
+                    <path d="M19.2188 2.96875H0.78125C0.349766 2.96875 0 3.31852 0 3.75C0 4.18148 0.349766 4.53125 0.78125 4.53125H19.2188C19.6502 4.53125 20 4.18148 20 3.75C20 3.31852 19.6502 2.96875 19.2188 2.96875Z" fill="white"/>
+                    <path d="M19.2188 15.4688H0.78125C0.349766 15.4688 0 15.8185 0 16.25C0 16.6815 0.349766 17.0312 0.78125 17.0312H19.2188C19.6502 17.0312 20 16.6815 20 16.25C20 15.8185 19.6502 15.4688 19.2188 15.4688Z" fill="white"/>
+                </svg>
             </button>
         </div>
     </header>
     <main>
-        <section>
+        <section class="section_1">
             <div class="container">
-                <h1>
+                <h1 class="section_1_white">
                     Экскурсии на квадроциклах в Геленджике
                 </h1>
-                <p>
+                <p class="section_1_regularwhite">
                     приезжайте за новыми ощущениями и эмоциями!
                 </p>
-                <a href="">подобрать маршрут<img src="" alt=""></a>
+                <a href="" class="section_1_button">подобрать маршрут<img src="" alt=""></a>
                 <div class="container"></div>
                 <button>
-                    Слайд 1
                 </button>
                 <button>
-                    Слайд 2
                 </button>
                 <button>
-                    Слайд 3
                 </button>
             </div>
         </section>
-        <section>
+        <section class="section_2">
             <div class="container">
                 <h2>
                     Преимущества
@@ -109,10 +109,10 @@
                         </ul>
                         <div><a href="">Подробнее</a><a href="">Забронировать</a></div>
                         <ul>
-                            <li><img src="/images/car 1.jpg" alt="" width="186.85" height="186.85">
-                                <img src="/images/car 3.jpg" alt="" width="129.88" height="155.86"></li>
+                            <li><img src="/images/car 1.jpg" alt="" width="187" height="187">
+                                <img src="/images/car 3.jpg" alt="" width="130" height="156"></li>
                         </ul>
-                        <div><button>Слайд 1</button><button>Слайд 2</button><button>Слайд 3</button><span>Scroll</span></div>
+                        <div><button></button><button></button><button></button><span>Scroll</span></div>
                     </li>
                 </ul>
                 <ul>
@@ -137,10 +137,10 @@
                         </ul>
                         <div><a href="">Подробнее</a><a href="">Забронировать</a></div>
                         <ul>
-                            <li><img src="/images/car second.jpg" alt="" width="186.85" height="186.85">
-                                <img src="/images/car first.jpg" alt="" width="129.88" height="155.86"></li>
+                            <li><img src="/images/car second.jpg" alt="" width="187" height="187">
+                                <img src="/images/car first.jpg" alt="" width="130" height="156"></li>
                         </ul>
-                        <div><button>Слайд 1</button><button>Слайд 2</button><button>Слайд 3</button><span>Scroll</span></div>
+                        <div><button></button><button></button><button></button><span>Scroll</span></div>
                     </li>
                 </ul>
                 <ul>
@@ -161,10 +161,10 @@
                         </ul>
                         <div><a href="">Подробнее</a><a href="">Забронировать</a></div>
                         <ul>
-                            <li><img src="/images/car.jpg" alt="" width="186.85" height="186.85">
-                                <img src="/images/car2.jpg" alt="" width="129.88" height="155.86"></li>
+                            <li><img src="/images/car.jpg" alt="" width="187" height="187">
+                                <img src="/images/car2.jpg" alt="" width="130" height="156"></li>
                         </ul>
-                        <div><button>Слайд 1</button><button>Слайд 2</button><button>Слайд 3</button><span>Scroll</span></div>
+                        <div><button></button><button></button><button></button><span>Scroll</span></div>
                     </li>
                 </ul>
             </div>
