--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>CF Moto</title>
 </head>
@@ -48,6 +48,7 @@
                 </h2>
                 <ul>
                     <li>
+                        <img src="/images/Group 327.svg" alt="" class="group327">
                         <h3>
                             Увлекательные экскурсии
                         </h3>
@@ -56,6 +57,7 @@
                         </p>
                     </li>
                     <li>
+                        <img src="/images/Group 328.svg" alt="" class="group328">
                         <h3>
                             Экипировка бесплатно
                         </h3>
@@ -64,6 +66,7 @@
                         </p>
                     </li>
                     <li>
+                        <img src="/images/Group 329.svg" alt="" class="group329">
                         <h3>
                             Надежная техника
                         </h3>
@@ -72,6 +75,7 @@
                         </p>
                     </li>
                     <li>
+                        <img src="/images/Group 330 (1).svg" alt="" class="group330">
                         <h3>
                             Опытные инструктора
                         </h3>
