css lab1 validate

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p class="section_1_regularwhite">
                     приезжайте за новыми ощущениями и эмоциями!
                 </p>
-                <a href="" class="section_1_button">подобрать маршрут<img src="" alt=""></a>
+                <a href="" class="section_1_button">подобрать маршрут<img src="#" alt=""></a>
                 <div class="container"></div>
                 <button>
                 </button>
@@ -48,7 +48,7 @@
                 </h2>
                 <ul>
                     <li>
-                        <img src="/images/Group 327.svg" alt="" class="group327">
+                        <img src="/images/Group327.svg" alt="" class="group327">
                         <h3>
                             Увлекательные экскурсии
                         </h3>
@@ -57,7 +57,7 @@
                         </p>
                     </li>
                     <li>
-                        <img src="/images/Group 328.svg" alt="" class="group328">
+                        <img src="/images/Group328.svg" alt="" class="group328">
                         <h3>
                             Экипировка бесплатно
                         </h3>
@@ -66,7 +66,7 @@
                         </p>
                     </li>
                     <li>
-                        <img src="/images/Group 329.svg" alt="" class="group329">
+                        <img src="/images/Group329.svg" alt="" class="group329">
                         <h3>
                             Надежная техника
                         </h3>
@@ -75,7 +75,7 @@
                         </p>
                     </li>
                     <li>
-                        <img src="/images/Group 330 (1).svg" alt="" class="group330">
+                        <img src="/images/Group330.svg" alt="" class="group330">
                         <h3>
                             Опытные инструктора
                         </h3>
@@ -113,8 +113,8 @@
                         </ul>
                         <div><a href="">Подробнее</a><a href="">Забронировать</a></div>
                         <ul>
-                            <li><img src="/images/car 1.jpg" alt="" width="187" height="187">
-                                <img src="/images/car 3.jpg" alt="" width="130" height="156"></li>
+                            <li><img src="/images/car1.jpg" alt="" width="187" height="187">
+                                <img src="/images/car3.jpg" alt="" width="130" height="156"></li>
                         </ul>
                         <div><button></button><button></button><button></button><span>Scroll</span></div>
                     </li>
@@ -141,8 +141,8 @@
                         </ul>
                         <div><a href="">Подробнее</a><a href="">Забронировать</a></div>
                         <ul>
-                            <li><img src="/images/car second.jpg" alt="" width="187" height="187">
-                                <img src="/images/car first.jpg" alt="" width="130" height="156"></li>
+                            <li><img src="/images/carsecond.jpg" alt="" width="187" height="187">
+                                <img src="/images/carfirst.jpg" alt="" width="130" height="156"></li>
                         </ul>
                         <div><button></button><button></button><button></button><span>Scroll</span></div>
                     </li>
