--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </ul>
             </div>
         </section>
-        <section>
+        <section class="section_3">
             <div class="container">
                 <h2>
                     Наши маршруты
@@ -173,7 +173,7 @@
                 </ul>
             </div>
         </section>
-        <section>
+        <section class="section_4">
             <div class="container">
                 <h2>
                     Затрудняетесь выбрать маршрут?
@@ -185,7 +185,7 @@
                 <a href="">Начать тест</a>
             </div>
         </section>
-        <section>
+        <section class="section_5">
             <div class="container">
                 <h2>
                     Наша команда
@@ -230,7 +230,7 @@
                 </ul>
             </div>
         </section>
-        <section>
+        <section class="section_6">
             <div class="container">
                 <h2>
                     Условия предоставления услуг
@@ -245,7 +245,7 @@
                 </ul>
             </div>
         </section>
-        <section>
+        <section class="section_7">
             <div class="container">
                 <h2>
                     Спецпредложения
@@ -273,7 +273,7 @@
                 <a href="">Подробнее</a>
             </div>
         </section>
-        <section>
+        <section class="section_8">
             <div class="container">
                 <h2>
                     Подарочный сертификат
@@ -291,7 +291,7 @@
                 <a href="">Подберем сертификат для вас</a>
             </div>
         </section>
-        <section>
+        <section class="section_9">
             <div class="container">
                 <h2>
                     Вопросы-ответы
@@ -333,7 +333,7 @@
                 </a>
             </div>
         </section>
-        <footer>
+        <footer class="footer">
             <div class="container">
                 <h2>
                     Контакты
