--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             
-            <button class="burger_menu">
+            <button class="burger_menu" alt = "бургер меню">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                     <path d="M19.2188 9.21875H0.78125C0.349766 9.21875 0 9.56852 0 10C0 10.4315 0.349766 10.7812 0.78125 10.7812H19.2188C19.6502 10.7812 20 10.4315 20 10C20 9.56852 19.6502 9.21875 19.2188 9.21875Z" fill="white"/>
                     <path d="M19.2188 2.96875H0.78125C0.349766 2.96875 0 3.31852 0 3.75C0 4.18148 0.349766 4.53125 0.78125 4.53125H19.2188C19.6502 4.53125 20 4.18148 20 3.75C20 3.31852 19.6502 2.96875 19.2188 2.96875Z" fill="white"/>
@@ -255,7 +255,7 @@
                 </h2>
                 <ul class="team-heros">
                     <li>
-                        <img src="images/hero1.png" alt="Юлиана руководитель">
+                        <img src="images/hero1.png" alt="Женщина">
                         <h3 class="BlueTextColor">
                             Юлиана
                         </h3>
@@ -264,7 +264,7 @@
                         </p>
                     </li>
                     <li>
-                        <img src="images/hero2.png" alt="Максим старший инструктор">
+                        <img src="images/hero2.png" alt="Мужчина">
                         <h3 class="BlueTextColor">
                             Максим
                         </h3>
@@ -273,7 +273,7 @@
                         </p>
                     </li>
                     <li>
-                        <img src="images/hero3.png" alt="Кристина администратор">
+                        <img src="images/hero3.png" alt="Женщина">
                         <h3 class="BlueTextColor">
                             Кристина
                         </h3>
@@ -282,7 +282,7 @@
                         </p>
                     </li>
                     <li>
-                        <img src="images/hero4.png" alt="Юрий старший механик">
+                        <img src="images/hero4.png" alt="Мужчина">
                         <h3 class="BlueTextColor">
                             Юрий
                         </h3>
